[metadata]
name = pymixin-hexadecimal-chocolate
version = 1.0.0
description = A mixins module for python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
python_requires = >=3.6
[options.packages.find]
where = .